<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/register_full_name"
                    style="@style/Base.DialogWindowTitle.AppCompat"
                    android:hint="@string/et_full_name"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/register_email_address"
                    style="@style/Base.DialogWindowTitle.AppCompat"
                    android:hint="@string/et_email_address"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/register_university"
                    style="@style/Base.DialogWindowTitle.AppCompat"
                    android:hint="@string/et_university_organization"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/register_password"
                    style="@style/Base.DialogWindowTitle.AppCompat"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/register_confirm_password"
                    style="@style/Base.DialogWindowTitle.AppCompat"
                    android:hint="@string/et_confirm_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/btn_register"
                    android:text="@string/et_register"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>