<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:src="@drawable/ic_public_black_24dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginTop="75dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"/>
            <TextView
                    android:text="@string/tv_welcome_to_binar_app"
                    android:textSize="24sp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        style="@style/Widget.AppCompat.Button"
                        android:id="@+id/btn_to_register"
                        android:text="@string/text_btn_register"
                        android:layout_marginEnd="20dp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"/>
                <Button
                        style="@style/Widget.AppCompat.Button"
                        android:id="@+id/btn_to_login"
                        android:text="@string/text_btn_login"
                        android:layout_marginStart="20dp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>